SPRITA-00002: Added templates

--- a/de.dc.spring.mm.edit/plugin.properties
+++ b/de.dc.spring.mm.edit/plugin.properties
@@ -191,3 +191,20 @@ _UI_Field_name_feature = Name
 _UI_Field_datatype_feature = Datatype
 _UI_Entity_superClass_feature = Super Class
 _UI_Field_isId_feature = Is Id
+_UI_Mapping_type = Mapping
+_UI_MappingType_type = Mapping Type
+_UI_Entity_mapping_feature = Mapping
+_UI_Mapping_entity_feature = Entity
+_UI_Mapping_isList_feature = Is List
+_UI_Mapping_mappingType_feature = Mapping Type
+_UI_OneToMany_type = One To Many
+_UI_ManyToMany_type = Many To Many
+_UI_ManyToOne_type = Many To One
+_UI_ManyToMany_cascade_feature = Cascade
+_UI_ManyToMany_joinTableName_feature = Join Table Name
+_UI_Cascade_ALL_literal = ALL
+_UI_ManyToMany_joinColumns_feature = Join Columns
+_UI_ManyToMany_inverseJoinColumns_feature = Inverse Join Columns
+_UI_ManyToMany_mappedBy_feature = Mapped By
+_UI_Mapping_name_feature = Name
+_UI_OneToOne_type = One To One
