SPRITA-00003: Updated the meta model

--- a/de.dc.spring.mm.edit/plugin.properties
+++ b/de.dc.spring.mm.edit/plugin.properties
@@ -208,3 +208,16 @@ _UI_ManyToMany_inverseJoinColumns_feature = Inverse Join Columns
 _UI_ManyToMany_mappedBy_feature = Mapped By
 _UI_Mapping_name_feature = Name
 _UI_OneToOne_type = One To One
+_UI_RestMapping_type = Rest Mapping
+_UI_GetMapping_type = Get Mapping
+_UI_PostMapping_type = Post Mapping
+_UI_RestController_name_feature = Name
+_UI_RestController_usedEntities_feature = Used Entities
+_UI_RestController_mappings_feature = Mappings
+_UI_RestMapping_path_feature = Path
+_UI_RestMapping_name_feature = Name
+_UI_RestMapping_usedEntity_feature = Used Entity
+_UI_RestMapping_body_feature = Body
+_UI_PostMapping_parameters_feature = Parameters
+_UI_MappingType_cascade_feature = Cascade
+_UI_MappingType_mappedBy_feature = Mapped By
